# playground

bash/: getSlsVars.sh  memErrors.sh
bash/writefiles/: run.sh
go/learning/api-footbal-standings/: go.mod  main.go
go/learning/cliTool/: go.mod  go.sum  main.go
go/learning/cliTool/cmd/: root.go
go/learning/modules/hello/: hello.go
go/learning/udemy-course/HTTP/: main.go
go/learning/udemy-course/cards/: _decktesting  deck.go  deck_test.go  my_cards
go/learning/udemy-course/channels/: main.go
go/learning/udemy-course/helloworld/: main
go/learning/udemy-course/interfaces-assignment-1/: main.go
javascript/: index.js  index.mjs  package.json
javascript/awssdk/: index.mjs  package.json
javascript/axios/: index.js  package-lock.json  package.json
javascript/express/: index.js  package-lock.json
lambda/: handler.py  package-lock.json  package.json  serverless.yml
nginx/: Dockerfile  nginx-selfsigned.crt  nginx-selfsigned.key
nginx/conf/conf.d/: default.conf
python/: test.py
rust/graphql-testing/: Cargo.toml
rust/graphql-testing/src/: main.rs  query_1.graphql
s3-onprem/: Dockerfile
s3-onprem/js-client/: index.js  package.json  sdkv3.js
s3-onprem/k8s/: config.json  curl-pod.yml  long-running-pod.yaml  pod.yml  test-pod.yaml
s3-onprem/k8s/rook/: object.yaml  values.yaml
s3-onprem/minio/: run.sh
s3-onprem/python-client/: Dockerfile  app.py
typescript/dynamicLoading/: index.ts  package.json  testOutput.ts  versionsList.ts  versionsListDynamic.ts
typescript/dynamicLoading/versions/: test1.ts  test2.ts  test3.ts
(+6 files in other folders)
