[package]
name = "graphql-testing"
version = "0.1.0"
edition = "2021"
include = ["src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.13.0"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
prettytable-rs = "^0.7"
clap = { version = "^3.0", features = ["derive"] }
log = "^0.4"
env_logger = "^0.5"